now i am соня not вера have no belieffff

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <html>
 	<head>
-		<title>Личная страница Веры Кузнецовой</title>
-	 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Личная страница Сони Мустецовой</title>
+	 	<meta name="viewport" content="width=device-width, initial-scale=5.0">
 		<meta charset="utf-8">
 		<meta name="description" content="Личная страница и контакты">
 		<!-- Bootstrap Core CSS -->
@@ -23,14 +23,14 @@
 				</nav>
 			</div>
 		</nav>
-		<header style="background-color:plum; padding-top:70px; ">
+		<header style="background-color:blue; padding-top:90px; ">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-4">
 						<br/><br/>
-						<h1>Вера Кузнецова</h1>
+						<h1>Соня Мустецова</h1>
 						<hr>
-						<p><i>Человек, умеющий делать HTML</i></p>
+						<p><i>Человек, еще не очень умеющий делать HTML</i></p>
 	                </div>
 					<div class="col-md-4">
         	            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ce/Petrus_Christus_-_Portrait_of_a_Young_Woman_-_Google_Art_Project.jpg/368px-Petrus_Christus_-_Portrait_of_a_Young_Woman_-_Google_Art_Project.jpg" title="Petrus Christus - Portrait of a Young Woman - Google Art Project.jpg" alt="" style="height:320px; margin:20px 20px 40px 20px; " >
@@ -47,7 +47,7 @@
 					</article>
 					<article>
 						<h3>Родной город</h2>
-						<p>Новосибирск</p>
+						<p>Климовск</p>
 					</article>
 					<article>
 						<h3>Школа</h2>
