--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<p><i>Человек, еще не очень умеющий делать HTML</i></p>
 	                </div>
 					<div class="col-md-4">
-        	            <img src="https://github.com/wattsoup/My-page/blob/master/ojO2zU4R5BY.jpg" title="Petrus Christus - Portrait of a Young Woman - Google Art Project.jpg" alt="" style="height:320px; margin:20px 20px 40px 20px; " >
+        	            <img src="ojO2zU4R5BY.jpg" title="Petrus Christus - Portrait of a Young Woman - Google Art Project.jpg" alt="" style="height:320px; margin:20px 20px 40px 20px; " >
 					</div>
 	            </div>
 			</div>
