--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <html>
 	<head>
-		<title>Личная страница Сони Мустецовой</title>
-	 	<meta name="viewport" content="width=device-width, initial-scale=5.0">
+		<title>Пэйдж Сони Мустецовой</title>
+	 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="utf-8">
 		<meta name="description" content="Личная страница и контакты">
 		<!-- Bootstrap Core CSS -->
@@ -23,7 +23,7 @@
 				</nav>
 			</div>
 		</nav>
-		<header style="background-color:blue; padding-top:90px; ">
+		<header style="background-color:#e9ded8; padding-top:90px; ">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-4">
@@ -33,8 +33,15 @@
 						<p><i>Человек, еще не очень умеющий делать HTML</i></p>
 	                </div>
 					<div class="col-md-4">
-        	            <img src="ojO2zU4R5BY.jpg" title="Petrus Christus - Portrait of a Young Woman - Google Art Project.jpg" alt="" style="height:320px; margin:20px 20px 40px 20px; " >
+        	            <img src="ojO2zU4R5BY.jpg" alt="" style="height:620px; margin:20px 20px 40px 20px; " >
 					</div>
+					<div class="col-md-4">
+						          <img src="ojO2zU4R5BY.jpg" alt="" style="height:620px; margin:20px 20px 40px 20px; " >
+						</div>
+						<div class="col-md-4">
+							          <img src="ojO2zU4R5BY.jpg" alt="" style="height:620px; margin:20px 20px 40px 20px; " >
+							</div>
+
 	            </div>
 			</div>
 		</header>
