--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 		<meta charset="utf-8">
 		<meta name="description" content="Личная страница и контакты">
 		<!-- Bootstrap Core CSS -->
-    	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" media="screen">
+      <link rel="stylesheet" type="text/css" href="styles.css">
+			<link href="https://fonts.googleapis.com/css?family=Playfair+Display&amp;subset=cyrillic" rel="stylesheet">
 	</head>
 	<body>
 		<nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
@@ -33,13 +34,13 @@
 						<p><i>Человек, еще не очень умеющий делать HTML</i></p>
 	                </div>
 					<div class="col-md-4">
-        	            <img src="ojO2zU4R5BY.jpg" alt="" style="height:620px; margin:20px 20px 40px 20px; " >
+        	            <img src="ojO2zU4R5BY.jpg" alt="" style="height:320px; margin:20px 20px 40px 20px; " >
 					</div>
 					<div class="col-md-4">
-						          <img src="ojO2zU4R5BY.jpg" alt="" style="height:620px; margin:20px 20px 40px 20px; " >
+						          <img src="pere.jpg" alt="" style="height:320px; margin:20px 20px 40px 20px; " >
 						</div>
 						<div class="col-md-4">
-							          <img src="ojO2zU4R5BY.jpg" alt="" style="height:620px; margin:20px 20px 40px 20px; " >
+							          <img src="ojO2zU4R5BY.jpg" alt="" style="height:320px; margin:20px 20px 40px 20px; " >
 							</div>
 
 	            </div>
