--- a/index.html
+++ b/index.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 
 <html>
-	<head>
+  <head>
+    <style>
+    body{
+      background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Joan_of_Arc_miniature_graded.jpg/640px-Joan_of_Arc_miniature_graded.jpg");
+			background-repeat: no-repeat;
+			background-size: 150%
+    }
+    </style>
 		<title>Пэйдж Сони Мустецовой</title>
-	 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="utf-8">
-		<meta name="description" content="Личная страница и контакты">
+		<meta name="description" Mcontent="Личная страница и контакты">
 		<!-- Bootstrap Core CSS -->
-      <link rel="stylesheet" type="text/css" href="styles.css">
 			<link href="https://fonts.googleapis.com/css?family=Playfair+Display&amp;subset=cyrillic" rel="stylesheet">
+
+  </head>
+		
+
+
+
 	</head>
 	<body>
-		<nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
+		<link href="https://fonts.googleapis.com/css?family=Playfair+Display&amp;subset=cyrillic" rel="stylesheet">
+
+		<!-- <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
 			<div class="container">
 				<div class="navbar-header">
 					<a href="https://ling.hse.ru/" class="navbar-brand">Школа лингвистики НИУ ВШЭ</a>
@@ -24,7 +38,7 @@
 				</nav>
 			</div>
 		</nav>
-		<header style="background-color:#e9ded8; padding-top:90px; ">
+	-->
 			<div class="container">
 				<div class="row">
 					<div class="col-md-4">
@@ -33,19 +47,38 @@
 						<hr>
 						<p><i>Человек, еще не очень умеющий делать HTML</i></p>
 	                </div>
-					<div class="col-md-4">
-        	            <img src="ojO2zU4R5BY.jpg" alt="" style="height:320px; margin:20px 20px 40px 20px; " >
+									<style type="text/css">
+	TABLE {
+	 width: 100%;
+	 height: 100%;
+	 background-image: url("pere.jpg");
+   background-color: #cccccc;
+ }
+ </style>
+</head>
+<body>
+<table>
+<tr>
+<td align="center"><img src="ojO2zU4R5BY.jpg" alt="" style="height:320px; margin:20px 20px 40px 20px; " >
+</td>
+<td align="left"><img src="ojO2zU4R5BY.jpg" alt="" style="height:320px; margin:20px 20px 40px 20px; " >
+</td>
+<td align="center"><img src="ojO2zU4R5BY.jpg" alt="" style="height:320px; margin:20px 20px 40px 20px; " >
+</td>
+<td align="left"><img src="ojO2zU4R5BY.jpg" alt="" style="height:320px; margin:20px 20px 40px 20px; " >
+</td>
+
+</tr>
+</table>
 					</div>
 					<div class="col-md-4">
 						          <img src="pere.jpg" alt="" style="height:320px; margin:20px 20px 40px 20px; " >
 						</div>
-						<div class="col-md-4">
-							          <img src="ojO2zU4R5BY.jpg" alt="" style="height:320px; margin:20px 20px 40px 20px; " >
-							</div>
+
 
 	            </div>
 			</div>
-		</header>
+
 		<section id="portfolio">
 			<div class="container">
 				<div class="col-md-3">
@@ -66,9 +99,9 @@
 					<article>
 						<h3>Тут можно написать</h2>
 						<p>Еще  <br />
-						много <br />
-						много <br />
-						много <br />
+						я <br />
+						люблю <br />
+						 <br />
 						много <br />
 						много <br />
 						много <br />
@@ -80,19 +113,18 @@
 					</article>
 				</div>
 				<div class="col-md-3">
-					<h3>Я в соцсетях</h3>
+					<h3>Мои контакты</h3>
 					<ul>
-						<li>VK</li>
-						<li>Facebook</li>
-						<li>Twitter</li>
-						<li>Instagram</li>
+						<li>+7(966)316-32-61</li>
+						<li>mustetsovasofia@gmail.com</li>
+
 					</ul>
 				</div>
 			</div>
 		</section>
 		<footer class="bs-docs-footer">
 			<div class="container">
-				<p style="text-align:right; ">&copy; В. Кузнецова, 2018</p>
+				<p style="text-align:right; ">&copy; хыхы 2018</p>
 			</div>
 		</footer>
 	</body>
