--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <head>
     <style>
     body{
-      background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Joan_of_Arc_miniature_graded.jpg/640px-Joan_of_Arc_miniature_graded.jpg");
+      /*background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Joan_of_Arc_miniature_graded.jpg/640px-Joan_of_Arc_miniature_graded.jpg");
 			background-repeat: no-repeat;
-			background-size: 150%
+			background-size: 100% */
+			background-color: #ffffff;
     }
     </style>
 		<title>Пэйдж Сони Мустецовой</title>
@@ -14,16 +15,12 @@
 		<meta charset="utf-8">
 		<meta name="description" Mcontent="Личная страница и контакты">
 		<!-- Bootstrap Core CSS -->
-			<link href="https://fonts.googleapis.com/css?family=Playfair+Display&amp;subset=cyrillic" rel="stylesheet">
+		<link href='http://fonts.googleapis.com/css?family=Roboto:300,400,500&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" media="screen">
 
   </head>
-		
 
-
-
-	</head>
 	<body>
-		<link href="https://fonts.googleapis.com/css?family=Playfair+Display&amp;subset=cyrillic" rel="stylesheet">
 
 		<!-- <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
 			<div class="container">
@@ -52,7 +49,7 @@
 	 width: 100%;
 	 height: 100%;
 	 background-image: url("pere.jpg");
-   background-color: #cccccc;
+   background-color: #ffffff;
  }
  </style>
 </head>
@@ -75,8 +72,6 @@
 						          <img src="pere.jpg" alt="" style="height:320px; margin:20px 20px 40px 20px; " >
 						</div>
 
-
-	            </div>
 			</div>
 
 		<section id="portfolio">
