--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
 				<div class="row">
 					<div class="col-md-4">
 						<br/><br/>
-						<h1>Соня Мустецова</h1>
+						<h1 align="center">Соня </h1>
+						<h1 align="right">Мустецова </h1>
+
+
 						<hr>
 						<p><i>Человек, еще не очень умеющий делать HTML</i></p>
 	                </div>
@@ -68,15 +71,37 @@
 </tr>
 </table>
 					</div>
+					<div class="container">
+						<div class="row">
 					<div class="col-md-4">
 						          <img src="pere.jpg" alt="" style="height:320px; margin:20px 20px 40px 20px; " >
 						</div>
+						<div class="col-md-3">
+  						          <img src="text.jpg" alt="" style="height:250px; margin:20px 20px 40px 20px; " >
+          <div class="col-md-4">
+						<article>
+							<p>
+								<br />
+								Еще  <br />
+							я <br />
+							люблю <br />
+							 <br />
+							немного- <br />
+							много <br />
+							много <br />
+							много <br />
+							много <br />
+							много <br />
+							много <br />
+							всего В себе</p>
+					 </article>
 
-			</div>
+
+
 
 		<section id="portfolio">
 			<div class="container">
-				<div class="col-md-3">
+				<div class="col-md-5">
 					<article>
 						<h3>Место учебы</h2>
 						<p>Фундаментальная и прикладная лингвистика, НИУ ВШЭ, Москва</p>
@@ -85,28 +110,8 @@
 						<h3>Родной город</h2>
 						<p>Климовск</p>
 					</article>
-					<article>
-						<h3>Школа</h2>
-						<p>СУНЦ НГУ</p>
-					</article>
 				</div>
-				<div class="col-md-6">
-					<article>
-						<h3>Тут можно написать</h2>
-						<p>Еще  <br />
-						я <br />
-						люблю <br />
-						 <br />
-						много <br />
-						много <br />
-						много <br />
-						много <br />
-						много <br />
-						много <br />
-						много <br />
-						всего о себе</p>
-					</article>
-				</div>
+
 				<div class="col-md-3">
 					<h3>Мои контакты</h3>
 					<ul>
@@ -119,7 +124,7 @@
 		</section>
 		<footer class="bs-docs-footer">
 			<div class="container">
-				<p style="text-align:right; ">&copy; хыхы 2018</p>
+				<p style="text-align:right; ">&copy; 2018</p>
 			</div>
 		</footer>
 	</body>
