--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-
-<html>
+<!--прошу прощения за столь сумбурную работу
+и огромное количество комитов, в тщетных попытках вспомнить как тут все завязано
+я решила просто немного скорректировать шаблон*/
+<html> -->
   <head>
     <style>
     body{
@@ -21,21 +23,6 @@
   </head>
 
 	<body>
-
-		<!-- <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
-			<div class="container">
-				<div class="navbar-header">
-					<a href="https://ling.hse.ru/" class="navbar-brand">Школа лингвистики НИУ ВШЭ</a>
-				</div>
-				<nav class="collapse navbar-collapse" id="bs-navbar">
-					<ul class="nav navbar-nav navbar-right">
-						<li> <a href="https://lingvocodes.github.io/HSEinfo/ba-ling-2018/index.html">Страница курса</a> </li>
-						<li> <a href="https://lingvocodes.github.io/HSEinfo/ba-ling-2018/baling_2018_1.html">Страница группы</a> </li>
-					</ul>
-				</nav>
-			</div>
-		</nav>
-	-->
 			<div class="container">
 				<div class="row">
 					<div class="col-md-4">
@@ -46,39 +33,89 @@
 
 						<hr>
 						<p><i>Человек, еще не очень умеющий делать HTML</i></p>
-	                </div>
+	        </div>
 									<style type="text/css">
 	TABLE {
 	 width: 100%;
 	 height: 100%;
 	 background-image: url("pere.jpg");
    background-color: #ffffff;
+	 table-layout: fixed;
  }
+
+
+
  </style>
 </head>
 <body>
 <table>
 <tr>
-<td align="center"><img src="ojO2zU4R5BY.jpg" alt="" style="height:320px; margin:20px 20px 40px 20px; " >
+<td align="center"><img src="ojO2zU4R5BY.jpg" alt="" style="height:100px; margin:20px 20px 40px 20px; " >
 </td>
-<td align="left"><img src="ojO2zU4R5BY.jpg" alt="" style="height:320px; margin:20px 20px 40px 20px; " >
+<td align="center"><img src="ojO2zU4R5BY.jpg" alt="" style="height:220px; margin:20px 20px 40px 20px; " >
 </td>
-<td align="center"><img src="ojO2zU4R5BY.jpg" alt="" style="height:320px; margin:20px 20px 40px 20px; " >
+<td align="center"><img src="ojO2zU4R5BY.jpg" alt="" style="height:160px; margin:20px 20px 40px 20px; " >
 </td>
-<td align="left"><img src="ojO2zU4R5BY.jpg" alt="" style="height:320px; margin:20px 20px 40px 20px; " >
+<td align="left"><img src="ojO2zU4R5BY2.png" alt="" style="height:300px; margin:20px 20px 40px 20px; " >
+</td>
+</table>
+
+
+
+
+
+
+<!--<table>
+<tr>
+<td align="center"><img src="pere.jpg" alt="" style="height:320px; margin:20px 0px 60px 10px; " >
+</td>
+<td align="left"><img src="text.jpg" alt="" style="height:250px; margin:20px 20px 40px 20px; " >
+</td>
+
+<td align="left">
+
+		<p>
+			<br />
+			Еще  <br />
+		я <br />
+		люблю <br />
+		 <br />
+		немного- <br />
+		много <br />
+		много <br />
+		много <br />
+		много <br />
+		много <br />
+		много <br />
+		всего В себе</p>
+
+</td>
+<td
+	<h3>Место учебы</h2>
+	<p>Фундаментальная и прикладная лингвистика, НИУ ВШЭ, Москва</p>
+</article>
+<article>
+	<h3>Родной город</h2>
+	<p>Климовск</p>
+
 </td>
 
 </tr>
 </table>
-					</div>
+
+</tr>
+</table>
+-->
+
 					<div class="container">
-						<div class="row">
+
 					<div class="col-md-4">
 						          <img src="pere.jpg" alt="" style="height:320px; margin:20px 20px 40px 20px; " >
 						</div>
-						<div class="col-md-3">
+						<div class="col-md-2">
   						          <img src="text.jpg" alt="" style="height:250px; margin:20px 20px 40px 20px; " >
-          <div class="col-md-4">
+											</div>
+          <div class="col-md-1">
 						<article>
 							<p>
 								<br />
@@ -94,38 +131,45 @@
 							много <br />
 							много <br />
 							всего В себе</p>
-					 </article>
+							</article>
+						</div>
 
+					<div class="col-md-5">
 
+							<h3>Место учебы</h2>
+							<p>Фундаментальная и прикладная лингвистика НИУ ВШЭ, Москва</p>
 
+							<h3>Родной город</h2>
+							<p>Климовск</p>
 
-		<section id="portfolio">
-			<div class="container">
-				<div class="col-md-5">
-					<article>
-						<h3>Место учебы</h2>
-						<p>Фундаментальная и прикладная лингвистика, НИУ ВШЭ, Москва</p>
-					</article>
-					<article>
-						<h3>Родной город</h2>
-						<p>Климовск</p>
-					</article>
+						 <h3>Мои контакты</h3>
+						 <ul>
+							<li>+7-(966)-316-32-61</li>
+							<li>mustetsovasofia@gmail.com</li>
+					</div>
 				</div>
 
-				<div class="col-md-3">
-					<h3>Мои контакты</h3>
-					<ul>
-						<li>+7(966)316-32-61</li>
-						<li>mustetsovasofia@gmail.com</li>
 
-					</ul>
+
+
+				<div class="container">
+					<div class="row">
+						<div class="col-md-12">
+							<br/><br/>
+							<a href="https://www.pinterest.ru/lowglow/%D0%BB%D0%B0%D0%B9%D0%BA%D0%B8-%D0%BD%D0%B0-pinterest/"><p align="center" alt="" style="margin:-120px 20px 40px 20px; color:#879fbf"> <-- Люблю картинки! </p></a>
+						</div>
+					</div>
 				</div>
-			</div>
-		</section>
-		<footer class="bs-docs-footer">
-			<div class="container">
-				<p style="text-align:right; ">&copy; 2018</p>
-			</div>
-		</footer>
-	</body>
+
+
+<hr>
+</section>
+<footer class="bs-docs-footer">
+	<div class="container">
+		<p style="text-align:right; ">&copy; СС 2018</p>
+	</div>
+</footer>
+</body>
+
+
 </html>
