--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <!--прошу прощения за столь сумбурную работу
 и огромное количество комитов, в тщетных попытках вспомнить как тут все завязано
-я решила просто немного скорректировать шаблон*/
-<html> -->
+я решила просто немного скорректировать шаблоy -->
+<html>
   <head>
     <style>
     body{
-      /*background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Joan_of_Arc_miniature_graded.jpg/640px-Joan_of_Arc_miniature_graded.jpg");
-			background-repeat: no-repeat;
-			background-size: 100% */
 			background-color: #ffffff;
     }
     </style>
@@ -17,7 +14,6 @@
 		<meta charset="utf-8">
 		<meta name="description" Mcontent="Личная страница и контакты">
 		<!-- Bootstrap Core CSS -->
-		<link href='http://fonts.googleapis.com/css?family=Roboto:300,400,500&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" media="screen">
 
   </head>
@@ -60,52 +56,6 @@
 </td>
 </table>
 
-
-
-
-
-
-<!--<table>
-<tr>
-<td align="center"><img src="pere.jpg" alt="" style="height:320px; margin:20px 0px 60px 10px; " >
-</td>
-<td align="left"><img src="text.jpg" alt="" style="height:250px; margin:20px 20px 40px 20px; " >
-</td>
-
-<td align="left">
-
-		<p>
-			<br />
-			Еще  <br />
-		я <br />
-		люблю <br />
-		 <br />
-		немного- <br />
-		много <br />
-		много <br />
-		много <br />
-		много <br />
-		много <br />
-		много <br />
-		всего В себе</p>
-
-</td>
-<td
-	<h3>Место учебы</h2>
-	<p>Фундаментальная и прикладная лингвистика, НИУ ВШЭ, Москва</p>
-</article>
-<article>
-	<h3>Родной город</h2>
-	<p>Климовск</p>
-
-</td>
-
-</tr>
-</table>
-
-</tr>
-</table>
--->
 
 					<div class="container">
 
